Fix: Add backdrop blur to mobile menu for improved readability

--- a/about.html
+++ b/about.html
@@ -119,7 +119,8 @@
 
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu"
-            class="fixed inset-0 top-20 bg-background z-[90] md:hidden p-8 flex flex-col justify-between">
+            class="fixed inset-0 top-20 bg-background/90 z-[90] md:hidden p-8 flex flex-col justify-between"
+            style="backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);">
             <div class="space-y-12 pt-12">
                 <a href="index.html#menu" onclick="toggleMobileMenu()"
                     class="block text-4xl font-black uppercase tracking-tighter text-primary">The Menu.</a>
