--- a/about.html
+++ b/about.html
@@ -119,20 +119,20 @@
 
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu"
-            class="fixed inset-0 top-20 bg-background/90 z-[90] md:hidden p-8 flex flex-col justify-between"
-            style="backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);">
+            class="fixed inset-0 top-20 bg-primary/95 z-[90] md:hidden p-8 flex flex-col justify-between"
+            style="backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px);">
             <div class="space-y-12 pt-12">
                 <a href="index.html#menu" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-primary">The Menu.</a>
+                    class="block text-4xl font-black uppercase tracking-tighter text-background">The Menu.</a>
                 <a href="about.html" onclick="toggleMobileMenu()"
                     class="block text-4xl font-black uppercase tracking-tighter text-cta underline underline-offset-8 decoration-2">Our
                     Soul.</a>
                 <a href="index.html#locations" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-primary">Memphis.</a>
+                    class="block text-4xl font-black uppercase tracking-tighter text-background">Memphis.</a>
             </div>
             <div class="pb-12 space-y-4">
                 <p class="text-[10px] font-black uppercase tracking-[0.3em] text-cta">Legacy Roasters</p>
-                <p class="text-sm font-bold text-primary/60">(901) 323-4567</p>
+                <p class="text-sm font-bold text-background/60">(901) 323-4567</p>
             </div>
         </div>
     </nav>
