--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
 
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu"
-            class="fixed inset-0 top-20 bg-background/90 backdrop-blur-xl z-[90] md:hidden p-8 flex flex-col justify-between"
-            style="backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);">
+            class="fixed inset-0 top-20 bg-primary/95 backdrop-blur-2xl z-[90] md:hidden p-8 flex flex-col justify-between"
+            style="backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px);">
             <div class="space-y-12 pt-12">
                 <a href="#menu" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-primary">The Menu.</a>
-                <a href="#story" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-primary">Our Soul.</a>
+                    class="block text-4xl font-black uppercase tracking-tighter text-background">The Menu.</a>
+                <a href="about.html" onclick="toggleMobileMenu()"
+                    class="block text-4xl font-black uppercase tracking-tighter text-background">Our Soul.</a>
                 <a href="#locations" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-primary">Memphis.</a>
+                    class="block text-4xl font-black uppercase tracking-tighter text-background">Memphis.</a>
             </div>
             <div class="pb-12 space-y-4">
                 <p class="text-[10px] font-black uppercase tracking-[0.3em] text-cta">Legacy Roasters</p>
-                <p class="text-sm font-bold text-primary/60">(901) 323-4567</p>
+                <p class="text-sm font-bold text-background/60">(901) 323-4567</p>
             </div>
         </div>
     </nav>
