--- a/about.html
+++ b/about.html
@@ -81,6 +81,16 @@
             visibility: visible;
             transform: translateY(0);
         }
+
+        #main-content {
+            transition: filter 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        #main-content.blurred {
+            filter: blur(10px);
+            pointer-events: none;
+            user-select: none;
+        }
     </style>
 </head>
 
@@ -88,6 +98,10 @@
 
     <!-- Navigation -->
     <nav class="fixed top-0 left-0 right-0 z-[100] glass-nav">
+        ... (keeping nav structure) ...
+    </nav>
+
+    <div id="main-content">
         <div class="max-w-[1440px] mx-auto px-4 md:px-6 h-20 flex justify-between items-center">
             <a href="index.html" class="text-base md:text-lg font-black tracking-tighter uppercase text-primary">Memphis
                 Brew
@@ -119,8 +133,7 @@
 
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu"
-            class="fixed inset-0 top-20 bg-primary/95 z-[90] md:hidden p-8 flex flex-col justify-between"
-            style="backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px);">
+            class="fixed inset-0 top-20 bg-primary/90 z-[90] md:hidden p-8 flex flex-col justify-between">
             <div class="space-y-12 pt-12">
                 <a href="index.html#menu" onclick="toggleMobileMenu()"
                     class="block text-4xl font-black uppercase tracking-tighter text-background">The Menu.</a>
@@ -135,115 +148,122 @@
                 <p class="text-sm font-bold text-background/60">(901) 323-4567</p>
             </div>
         </div>
-    </nav>
+        </nav>
 
-    <!-- Header Section -->
-    <section class="pt-48 pb-20 px-6">
-        <div class="max-w-[1440px] mx-auto">
-            <h1
-                class="text-7xl md:text-[12rem] font-black tracking-tighter text-primary uppercase leading-[0.85] reveal-on-scroll">
-                Legacy<br>In Every<br><span class="text-cta">Drop.</span>
-            </h1>
-        </div>
-    </section>
-
-    <!-- Story Section -->
-    <section id="story" class="py-20 md:py-32 px-4 md:px-6">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 md:gap-20">
-            <div class="space-y-8 md:space-y-12 reveal-on-scroll">
-                <span class="text-xs font-black uppercase tracking-[0.3em] text-cta block">Our Story</span>
-                <h2 class="text-4xl md:text-7xl font-black uppercase tracking-tighter text-primary leading-none">A
-                    Multi-Generational Family Soul.</h2>
-                <div class="space-y-6 text-lg md:text-xl text-secondary/80 leading-relaxed font-medium">
-                    <p>Memphis Brew Company isn't just a coffee shop. It's a living archive of the Williams family.
-                        Founded over three generations ago in the heart of Memphis, we’ve been perfecting the art of the
-                        roast since 1954.</p>
-                    <p>As a Black-owned family business, we believe that coffee is the rhythm of the city. We took the
-                        grit of Beale Street and the grace of the Mississippi to create a space where everyone is
-                        family. passed down from father to daughter, the secret to our "Gold" roast remains within these
-                        walls.</p>
-                </div>
+        <!-- Header Section -->
+        <section class="pt-48 pb-20 px-6">
+            <div class="max-w-[1440px] mx-auto">
+                <h1
+                    class="text-7xl md:text-[12rem] font-black tracking-tighter text-primary uppercase leading-[0.85] reveal-on-scroll">
+                    Legacy<br>In Every<br><span class="text-cta">Drop.</span>
+                </h1>
             </div>
-            <div class="" style="transition-delay: 200ms;">
-                <div
-                    class="aspect-square rounded-[3rem] overflow-hidden shadow-2xl bg-primary/10 flex items-center justify-center">
-                    <img src="assets/coffee.PNG" alt="Williams Family Legacy" class="w-full h-full object-cover block"
-                        style="image-rendering: -webkit-optimize-contrast; image-rendering: high-quality;">
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Reviews Section -->
-    <section class="py-32 px-6 bg-primary text-background overflow-hidden">
-        <div class="max-w-7xl mx-auto space-y-24">
-            <div class="text-center reveal-on-scroll">
-                <span class="text-xs font-black uppercase tracking-[0.3em] text-cta mb-4 block">Testimonials</span>
-                <h2 class="text-6xl md:text-8xl font-black uppercase tracking-tighter">Pure Soul Approval.</h2>
-            </div>
-
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
-                <!-- Review 1 -->
-                <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll">
-                    <div class="flex text-cta space-x-1">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                    </div>
-                    <p class="text-xl font-medium leading-relaxed italic opacity-80">"The best espresso in the 901. You
-                        can literally taste the history. It's more than coffee; it's an experience."</p>
-                    <div>
-                        <span class="block font-black uppercase tracking-widest text-xs">Marcus J.</span>
-                        <span class="block text-[10px] uppercase tracking-widest opacity-40">Local Artist</span>
+        <!-- Story Section -->
+        <section id="story" class="py-20 md:py-32 px-4 md:px-6">
+            <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 md:gap-20">
+                <div class="space-y-8 md:space-y-12 reveal-on-scroll">
+                    <span class="text-xs font-black uppercase tracking-[0.3em] text-cta block">Our Story</span>
+                    <h2 class="text-4xl md:text-7xl font-black uppercase tracking-tighter text-primary leading-none">A
+                        Multi-Generational Family Soul.</h2>
+                    <div class="space-y-6 text-lg md:text-xl text-secondary/80 leading-relaxed font-medium">
+                        <p>Memphis Brew Company isn't just a coffee shop. It's a living archive of the Williams family.
+                            Founded over three generations ago in the heart of Memphis, we’ve been perfecting the art of
+                            the
+                            roast since 1954.</p>
+                        <p>As a Black-owned family business, we believe that coffee is the rhythm of the city. We took
+                            the
+                            grit of Beale Street and the grace of the Mississippi to create a space where everyone is
+                            family. passed down from father to daughter, the secret to our "Gold" roast remains within
+                            these
+                            walls.</p>
                     </div>
                 </div>
-
-                <!-- Review 2 -->
-                <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll"
-                    style="transition-delay: 100ms;">
-                    <div class="flex text-cta space-x-1">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                    </div>
-                    <p class="text-xl font-medium leading-relaxed italic opacity-80">"Finally, a minimalist space that
-                        still feels like home. The Williams family knows exactly how to roast soul."</p>
-                    <div>
-                        <span class="block font-black uppercase tracking-widest text-xs">Sarah L.</span>
-                        <span class="block text-[10px] uppercase tracking-widest opacity-40">Community Leader</span>
-                    </div>
-                </div>
-
-                <!-- Review 3 -->
-                <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll"
-                    style="transition-delay: 200ms;">
-                    <div class="flex text-cta space-x-1">
-                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                    </div>
-                    <p class="text-xl font-medium leading-relaxed italic opacity-80">"Unmatched vibes. The 'Memphis
-                        Gold' is liquid magic. Proud to support a multi-gen Black legacy."</p>
-                    <div>
-                        <span class="block font-black uppercase tracking-widest text-xs">David R.</span>
-                        <span class="block text-[10px] uppercase tracking-widest opacity-40">Blues Musician</span>
+                <div class="" style="transition-delay: 200ms;">
+                    <div
+                        class="aspect-square rounded-[3rem] overflow-hidden shadow-2xl bg-primary/10 flex items-center justify-center">
+                        <img src="assets/coffee.PNG" alt="Williams Family Legacy"
+                            class="w-full h-full object-cover block"
+                            style="image-rendering: -webkit-optimize-contrast; image-rendering: high-quality;">
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Simple Footer -->
-    <footer class="py-20 px-6 border-t border-primary/10">
-        <div
-            class="max-w-[1440px] mx-auto flex flex-col md:flex-row justify-between items-center gap-12 text-center md:text-left">
-            <div class="space-y-4">
-                <h2 class="text-4xl font-black tracking-tighter uppercase text-primary leading-none">Memphis<br>Brew
-                    Company.</h2>
-                <p class="text-[10px] uppercase tracking-widest text-primary font-black">(901) 323-4567 •
-                    info@memphisbrew.co</p>
+        <!-- Reviews Section -->
+        <section class="py-32 px-6 bg-primary text-background overflow-hidden">
+            <div class="max-w-7xl mx-auto space-y-24">
+                <div class="text-center reveal-on-scroll">
+                    <span class="text-xs font-black uppercase tracking-[0.3em] text-cta mb-4 block">Testimonials</span>
+                    <h2 class="text-6xl md:text-8xl font-black uppercase tracking-tighter">Pure Soul Approval.</h2>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+                    <!-- Review 1 -->
+                    <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll">
+                        <div class="flex text-cta space-x-1">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                        </div>
+                        <p class="text-xl font-medium leading-relaxed italic opacity-80">"The best espresso in the 901.
+                            You
+                            can literally taste the history. It's more than coffee; it's an experience."</p>
+                        <div>
+                            <span class="block font-black uppercase tracking-widest text-xs">Marcus J.</span>
+                            <span class="block text-[10px] uppercase tracking-widest opacity-40">Local Artist</span>
+                        </div>
+                    </div>
+
+                    <!-- Review 2 -->
+                    <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll"
+                        style="transition-delay: 100ms;">
+                        <div class="flex text-cta space-x-1">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                        </div>
+                        <p class="text-xl font-medium leading-relaxed italic opacity-80">"Finally, a minimalist space
+                            that
+                            still feels like home. The Williams family knows exactly how to roast soul."</p>
+                        <div>
+                            <span class="block font-black uppercase tracking-widest text-xs">Sarah L.</span>
+                            <span class="block text-[10px] uppercase tracking-widest opacity-40">Community Leader</span>
+                        </div>
+                    </div>
+
+                    <!-- Review 3 -->
+                    <div class="space-y-8 p-12 bg-white/5 rounded-[2rem] border border-white/10 reveal-on-scroll"
+                        style="transition-delay: 200ms;">
+                        <div class="flex text-cta space-x-1">
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                        </div>
+                        <p class="text-xl font-medium leading-relaxed italic opacity-80">"Unmatched vibes. The 'Memphis
+                            Gold' is liquid magic. Proud to support a multi-gen Black legacy."</p>
+                        <div>
+                            <span class="block font-black uppercase tracking-widest text-xs">David R.</span>
+                            <span class="block text-[10px] uppercase tracking-widest opacity-40">Blues Musician</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="flex space-x-12 text-xs font-black uppercase tracking-widest text-primary/50">
-                <a href="index.html" class="hover:text-primary transition-colors">Home</a>
-                <a href="index.html#menu" class="hover:text-primary transition-colors">Menu</a>
-                <a href="index.html#locations" class="hover:text-primary transition-colors">Find Us</a>
+        </section>
+
+        <!-- Simple Footer -->
+        <footer class="py-20 px-6 border-t border-primary/10">
+            <div
+                class="max-w-[1440px] mx-auto flex flex-col md:flex-row justify-between items-center gap-12 text-center md:text-left">
+                <div class="space-y-4">
+                    <h2 class="text-4xl font-black tracking-tighter uppercase text-primary leading-none">Memphis<br>Brew
+                        Company.</h2>
+                    <p class="text-[10px] uppercase tracking-widest text-primary font-black">(901) 323-4567 •
+                        info@memphisbrew.co</p>
+                </div>
+                <div class="flex space-x-12 text-xs font-black uppercase tracking-widest text-primary/50">
+                    <a href="index.html" class="hover:text-primary transition-colors">Home</a>
+                    <a href="index.html#menu" class="hover:text-primary transition-colors">Menu</a>
+                    <a href="index.html#locations" class="hover:text-primary transition-colors">Find Us</a>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 
     <script>
         const observer = new IntersectionObserver((entries) => {
@@ -256,15 +276,18 @@
         // Mobile Menu Logic
         function toggleMobileMenu() {
             const menu = document.getElementById('mobile-menu');
+            const content = document.getElementById('main-content');
             const path = document.getElementById('menu-icon-path');
             const isOpen = menu.classList.contains('open');
 
             if (isOpen) {
                 menu.classList.remove('open');
+                content.classList.remove('blurred');
                 document.body.classList.remove('no-scroll');
                 path.setAttribute('d', 'M4 8h16M4 16h16');
             } else {
                 menu.classList.add('open');
+                content.classList.add('blurred');
                 document.body.classList.add('no-scroll');
                 path.setAttribute('d', 'M6 18L18 6M6 6l12 12');
             }
