--- a/about.html
+++ b/about.html
@@ -87,7 +87,8 @@
         }
 
         #main-content.blurred {
-            filter: blur(10px);
+            filter: blur(20px);
+            opacity: 0.5;
             pointer-events: none;
             user-select: none;
         }
@@ -96,58 +97,66 @@
 
 <body class="selection:bg-primary selection:text-background">
 
-    <!-- Navigation -->
-    <nav class="fixed top-0 left-0 right-0 z-[100] glass-nav">
-        ... (keeping nav structure) ...
-    </nav>
+    <!-- Mobile Menu Overlay (Outside Main Content) -->
+    <div id="mobile-menu" class="fixed inset-0 bg-primary/95 z-[150] md:hidden p-8 flex flex-col justify-between"
+        style="backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px);">
+        <div class="flex justify-end pt-4">
+            <button onclick="toggleMobileMenu()" class="text-background p-2">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M6 18L18 6M6 6l12 12">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        <div class="space-y-12 pt-12">
+            <a href="index.html#menu" onclick="toggleMobileMenu()"
+                class="block text-4xl font-black uppercase tracking-tighter text-background">The Menu.</a>
+            <a href="about.html" onclick="toggleMobileMenu()"
+                class="block text-4xl font-black uppercase tracking-tighter text-cta underline underline-offset-8 decoration-2">Our
+                Soul.</a>
+            <a href="index.html#locations" onclick="toggleMobileMenu()"
+                class="block text-4xl font-black uppercase tracking-tighter text-background">Memphis.</a>
+        </div>
+        <div class="pb-12 space-y-4">
+            <p class="text-[10px] font-black uppercase tracking-[0.3em] text-cta">Legacy Roasters</p>
+            <p class="text-sm font-bold text-background/60">(901) 323-4567</p>
+        </div>
+    </div>
 
+    <!-- Main Content Wrapper (Target for Blur) -->
     <div id="main-content">
-        <div class="max-w-[1440px] mx-auto px-4 md:px-6 h-20 flex justify-between items-center">
-            <a href="index.html" class="text-base md:text-lg font-black tracking-tighter uppercase text-primary">Memphis
-                Brew
-                Company<span class="text-cta">.</span></a>
+        <!-- Navigation -->
+        <nav class="fixed top-0 left-0 right-0 z-[100] glass-nav">
+            <div class="max-w-[1440px] mx-auto px-4 md:px-6 h-20 flex justify-between items-center">
+                <a href="index.html"
+                    class="text-base md:text-lg font-black tracking-tighter uppercase text-primary">Memphis
+                    Brew
+                    Company<span class="text-cta">.</span></a>
 
-            <div
-                class="hidden md:flex items-center space-x-12 text-sm font-bold uppercase tracking-widest text-primary/70">
-                <a href="index.html#menu" class="hover:text-primary transition-colors">The Menu</a>
-                <a href="about.html" class="text-primary underline underline-offset-8 decoration-cta decoration-2">Our
-                    Soul</a>
-                <a href="index.html#locations" class="hover:text-primary transition-colors">Memphis</a>
-            </div>
+                <div
+                    class="hidden md:flex items-center space-x-12 text-sm font-bold uppercase tracking-widest text-primary/70">
+                    <a href="index.html#menu" class="hover:text-primary transition-colors">The Menu</a>
+                    <a href="about.html"
+                        class="text-primary underline underline-offset-8 decoration-cta decoration-2">Our
+                        Soul</a>
+                    <a href="index.html#locations" class="hover:text-primary transition-colors">Memphis</a>
+                </div>
 
-            <div class="flex items-center space-x-4 md:space-x-6">
-                <a href="index.html#visit"
-                    class="bg-primary text-background px-6 md:px-8 py-3 rounded-full text-[10px] md:text-xs font-black uppercase tracking-widest hover:scale-105 active:scale-95 transition-all shadow-lg">
-                    Order Now
-                </a>
+                <div class="flex items-center space-x-4 md:space-x-6">
+                    <a href="index.html#visit"
+                        class="bg-primary text-background px-6 md:px-8 py-3 rounded-full text-[10px] md:text-xs font-black uppercase tracking-widest hover:scale-105 active:scale-95 transition-all shadow-lg">
+                        Order Now
+                    </a>
 
-                <!-- Mobile Toggle -->
-                <button onclick="toggleMobileMenu()" class="md:hidden text-primary p-2">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path id="menu-icon-path" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
-                            d="M4 8h16M4 16h16"></path>
-                    </svg>
-                </button>
+                    <!-- Mobile Toggle -->
+                    <button onclick="toggleMobileMenu()" class="md:hidden text-primary p-2">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path id="menu-icon-path" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                                d="M4 8h16M4 16h16"></path>
+                        </svg>
+                    </button>
+                </div>
             </div>
-        </div>
-
-        <!-- Mobile Menu Overlay -->
-        <div id="mobile-menu"
-            class="fixed inset-0 top-20 bg-primary/90 z-[90] md:hidden p-8 flex flex-col justify-between">
-            <div class="space-y-12 pt-12">
-                <a href="index.html#menu" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-background">The Menu.</a>
-                <a href="about.html" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-cta underline underline-offset-8 decoration-2">Our
-                    Soul.</a>
-                <a href="index.html#locations" onclick="toggleMobileMenu()"
-                    class="block text-4xl font-black uppercase tracking-tighter text-background">Memphis.</a>
-            </div>
-            <div class="pb-12 space-y-4">
-                <p class="text-[10px] font-black uppercase tracking-[0.3em] text-cta">Legacy Roasters</p>
-                <p class="text-sm font-bold text-background/60">(901) 323-4567</p>
-            </div>
-        </div>
         </nav>
 
         <!-- Header Section -->
