Adjust mobile badge position

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 alt="Interior Design" class="w-full h-full object-cover">
                         </div>
                         <div
-                            class="absolute -bottom-10 -right-10 bg-cta text-primary p-12 rounded-full hidden md:block">
+                            class="absolute -bottom-4 -right-4 md:-bottom-10 md:-right-10 bg-cta text-primary p-12 rounded-full scale-[0.6] md:scale-100 origin-bottom-right">
                             <p class="text-xs font-black uppercase tracking-widest leading-none text-center">
                                 Est.<br><span class="text-3xl">1954</span><br>Memphis
                             </p>
